# macro_pad

./: .gitignore  .gitmodules  Amogus.json  PCB_Amogus_2.json  README.md  info
case/mesh/: base.stl  lid.stl
design/: PCB_Initial.json  PCB_Redesign.json  info  pcb.json
doc/: README.md
doc/website/: app.py
doc/website/static/: doc.css  os.css  style.css
doc/website/static/js/: copyCode.js  highlight.js
doc/website/templates/: base.html  doc.html  index.html  linux.html  os_count.html  windows.html
pcb/design/: PCB_Redesign.json  info  pcb.json
src/: .gitignore  CMakeLists.txt  README.md  build.sh  config.h  encoder.c  encoder.h  hid.c  hid.h  main.c  main.h  mhid.c  mhid.h  pins.h  upload.sh
src/lib/: display.c  display.h  encoder.c  encoder.h  hid_helpers.c  hid_helpers.h  mhid.c  mhid.h  qenc.pio  ssd1306.c  ssd1306.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
